--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "body-parser": "^1.20.2",
     "core-js": "^3.8.3",
+    "cors": "^2.8.5",
+    "lodash-id": "^0.14.1",
     "primeicons": "^6.0.1",
     "primevue": "^3.26.1",
     "vue": "^3.2.13",
