--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "primevue": "^3.26.1",
     "vue": "^3.2.13",
     "vue-router": "^4.1.6",
+    "vue-toast-notification": "^3.1.1",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
