--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "body-parser": "^1.20.2",
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
+    "fs": "^0.0.1-security",
     "lodash-id": "^0.14.1",
+    "multer": "^1.4.5-lts.1",
     "primeicons": "^6.0.1",
     "primevue": "^3.26.1",
     "vue": "^3.2.13",
