--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
     "fs": "^0.0.1-security",
+    "jwt-decode": "^3.1.2",
     "lodash-id": "^0.14.1",
     "multer": "^1.4.5-lts.1",
     "primeicons": "^6.0.1",
